--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,57 @@
-body
-{
-    background:#eee;
-    font-family:Helvetica,Arial;
-    font-size:14px;
+
+
+body {
+    background: #000;
+    font-family: Helvetica, Arial;
+    font-size: 14px;
 }
+
+.jeu {
+    width: 500px;
+    height: 500px;
+    background-color: #ececec;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.des {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    background: deeppink;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all ease 1s;
+    transform: translate(100px, -50px);
+    line-height: 50px;
+    vertical-align: center;
+    text-align: center;
+    font-size: 40px;
+    color:#ffffff;
+    font-weight: bold;
+}
+
+.reroll{
+    width: 100px;
+    height: 50px;
+    border-radius: 5px;
+    background: deeppink;
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 50px;
+    vertical-align: center;
+    text-align: center;
+    font-size: 20px;
+    color:#ffffff;
+    font-weight: bold;
+
+}
+
+.reroll:hover{
+        cursor: pointer;
+        background: #ff70cc;
+}
+
